--- a/course_01/APIs_with_flask/greenbank/pyproject.toml
+++ b/course_01/APIs_with_flask/greenbank/pyproject.toml
@@ -8,7 +8,8 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
-    "flask"
+    "flask",
+    "flask-sqlalchemy (>=3.1.1,<4.0.0)"
 ]
 
 
